Improving code quality

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,9 +14,9 @@ h1 {
     padding: 10px;
 }
 IMG{
-    position: absolute;
-    top:  250px; 
-    left: 390px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 canvas {
     padding-left: 0;
